# userspace-tablet-driver-daemon

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  artist_22r_pro.cpp  artist_22r_pro.h  device_interface_pair.h  event_handler.cpp  event_handler.h  transfer_handler.cpp  transfer_handler.h  usb_devices.cpp  usb_devices.h  vender_handler.cpp  vendor_handler.cpp  vendor_handler.h  xp_pen_handler.cpp  xp_pen_handler.h
.circleci/: config.yml
config/etc/udev/rules.d/: 70-uinput-plugdev.rules  70-xp-pen.rules
config/usr/share/X11/xorg.conf.d/: 60-huion.conf  60-xp-pen.conf
src/: ac19.cpp  ac19.h  aliased_input_event.h  artist_12.cpp  artist_12.h  artist_12_pro.cpp  artist_12_pro.h  artist_13_3_pro.cpp  artist_13_3_pro.h  artist_15_6_pro.cpp  artist_15_6_pro.h  artist_16_pro.cpp  artist_16_pro.h  artist_22e_pro.cpp  artist_22e_pro.h  artist_22r_pro.cpp  artist_22r_pro.h  artist_24_pro.cpp  artist_24_pro.h  artist_pro_16.cpp  artist_pro_16.h  artist_pro_16tp.cpp  artist_pro_16tp.h  button_mapping_configuration.cpp  button_mapping_configuration.h  deco.cpp  deco.h  deco_01v2.cpp  deco_01v2.h  deco_02.cpp  deco_02.h  deco_03.cpp  deco_03.h  deco_large.cpp  deco_large.h  deco_mini7.cpp  deco_mini7.h  deco_pro.cpp  deco_pro.h  deco_pro_medium.cpp  (+51 more)
