cmake_minimum_required(VERSION 3.20)
project(xp_pen_userland)

set(CMAKE_CXX_STANDARD 17)

add_executable(xp_pen_userland src/main.cpp src/usb_devices.cpp src/usb_devices.h src/vendor_handler.h src/xp_pen_handler.cpp src/xp_pen_handler.h src/device_interface_pair.h src/event_handler.cpp src/event_handler.h src/vendor_handler.cpp src/artist_22r_pro.cpp src/artist_22r_pro.h src/transfer_handler_pair.h src/transfer_handler.h src/transfer_handler.cpp src/uinput_pen_args.h src/uinput_pad_args.h src/pad_mapping.cpp src/pad_mapping.h src/dial_mapping.cpp src/dial_mapping.h src/aliased_input_event.h src/artist_13_3_pro.cpp src/artist_13_3_pro.h src/artist_24_pro.cpp src/artist_24_pro.h src/artist_12_pro.cpp src/artist_12_pro.h)
target_link_libraries(xp_pen_userland usb-1.0 stdc++fs)
install(TARGETS xp_pen_userland DESTINATION bin)

set(CPACK_PACKAGING_INSTALL_PREFIX "/usr")
set(CPACK_INSTALLED_DIRECTORIES "${CMAKE_CURRENT_SOURCE_DIR}/config;.")
set(CPACK_RESOURCE_FILE_LICENSE "LICENSE")
set(CPACK_STRIP_FILES "xp_pen_userland")
set(CPACK_GENERATOR "DEB")
set(CPACK_PACKAGE_VERSION_MAJOR "0")
set(CPACK_PACKAGE_VERSION_MINOR "1")
set(CPACK_PACKAGE_VERSION_PATCH "2")
set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Userland drivers for XP-Pen")
set(CPACK_PACKAGE_VENDOR "Aren Villanueva <https://github.com/kurikaesu>")
set(CPACK_PACKAGE_CONTACT "Aren Villanueva <kurikaesu@users.noreply.github.com>")
set(CPACK_DEBIAN_PACKAGE_VERSION "${CPACK_PACKAGE_VERSION}")
include(CPack)
